# music_worker

./: .gitignore  60-music-stack-root-watchdog.sh  70-mihomo-keepalive.sh  90-music-worker-keepalive.sh  AGENTS.md  README.md  mihomo_supervisor.sh  music_charts.py  music_config.py  music_core.py  music_download_store.py  music_local_api.py  music_lyrics.py  music_proxy_auth_store.py  music_stack_magisk_guardian.sh  music_stack_root_watchdog.sh  music_worker_supervisor.sh  music_worker_ws.py
.github/workflows/: windows-desktop-package.yml
android-app/: .gitignore  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/openclaw/musicworker/: MainActivity.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/xml/: file_paths.xml
android-app/tools/: aapt2
desktop-app/: build.gradle.kts  settings.gradle.kts
desktop-app/src/main/kotlin/com/openclaw/musicworker/desktop/: DesktopApp.kt  DesktopAppState.kt  DesktopChartsPage.kt  DesktopFileLogger.kt  (+17 more)
docs/: ANDROID_APP_DEVELOPMENT.md  ANDROID_CHARTS_FEATURE_DEVELOPMENT.md  WINDOWS_DESKTOP_ANDROID_PARITY.md  WINDOWS_DESKTOP_DEVELOPMENT.md  WINDOWS_DESKTOP_UI_REDESIGN.md  YOUTUBE_MUSIC_WEEKLY_TOP_SONGS_DEVELOPMENT.md
shared/: build.gradle.kts
tools/whisper_android_wrapper/: CMakeLists.txt
tools/whisper_android_wrapper/cmake/: FindThreads.cmake
(+19 files in other folders)
